# dc-contest-2021-r2

./: .gitignore  LICENSE
libtgcat-r2/: CMakeLists.txt  category_detect.h  lang_detect.h  tgcat.cpp  utils.h
libtgcat-tester-r2/: CMakeLists.txt
py-misc/: categories.json  categories.list  convert_to_toloka.py  data_record.py  evaluate_categories.py  evaluate_languages.py  extract_by_category.py  extract_chunk.py  extract_toloka_chunk.py  extract_validation_only.py  first_cat_dict.json  get_category_stats.py  get_stats.py  make_dataset.py  merge_raw_datasets.py  merge_toloka.py  prepare_categories.py  result_record.py  second_cat_dict.json  style.qss  toloka_results.py
