cmake_minimum_required(VERSION 3.0 FATAL_ERROR)
project(tgcat VERSION 2.0.0 LANGUAGES CXX)
find_library(LIBFASTTEXT ${CMAKE_SOURCE_DIR}/resources/libfasttext.a)
add_library(tgcat SHARED tgcat.cpp)
target_include_directories(tgcat PRIVATE ${CMAKE_SOURCE_DIR})
target_link_libraries(tgcat ${CMAKE_SOURCE_DIR}/resources/libfasttext.a)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17 -pthread")